# cli-ai

./: .gitignore  README.md  pyproject.toml
src/cli_ai/: __main__.py
