[tool.poetry]
name = "cli-ai"
version = "0.1.1"
description = ""
authors = ["Lee Braiden <leebraid@gmail.com>"]
packages = [
	{ include="cli_ai", from="src" },
]

[tool.poetry.scripts]
ai = "cli_ai.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.29.0"

[tool.poetry.dev-dependencies]
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
